RNW-130 fixing spacing on solution ads, missing bullets

--- a/hugo/themes/hugo-hero-theme/assets/scss/components/_page-who.scss
+++ b/hugo/themes/hugo-hero-theme/assets/scss/components/_page-who.scss
@@ -1,4 +1,10 @@
 .page-who {
+    ul {
+        @include media-breakpoint-down(sm) {
+            padding-left: 1.125rem;
+        }
+        list-style-type:disc;
+    }
     .absolute-who-image {
         display: none;
         @include media-breakpoint-up(xs) {
